<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >
        IconArrStudie
    </string>
    <string name="start">
        Start
    </string>
    <string name="test1" >
        Test 1 - Drag &amp; Drop
    </string>
    <string name="test2">
        Test 2 - Platzverbrauch
    </string>
    <string name="test3" >
        Test 3 - Positionen
    </string>
    <string name="save_file">
        launcher.db Teilen
    </string>
    <string name="debug">
        Debug-Informationen
    </string>
    <string name="choose_mail">
        Bitte wähle dein E-Mail Programm aus
    </string>
    <string name="screen">
        Screen
    </string>
    <string name="back">
        Zurück
    </string>
    <string name="confirm">
        Bestätigen
    </string>
    <string name="task1">
        Bitte ziehe Icons und Widgets auf die richtige Position, Widgets in die linke obere Ecke des von ihnen belegten Platzes
    </string>
    <string name="task2">
        Bitte markiere alle Felder auf denen ein Widget liegt
    </string>
    <string name="task3">
        Bitte wähle die Icons und Ordner aus die an der richtigen Position sitzen
    </string>
    <string name="clear">
        Zurücksetzen
    </string>
    <string name="undo">
        Rückgängig
    </string>
    <string name="action_settings" >
        Settings
    </string>
    <string name="no_more_elements">
        Keine Änderungen vorhanden
    </string>
    <string name="not_enough_elements">
        Nicht genügend Elemente auf dem Screen vorhanden
    </string>
    <string name="hello_world" >
        Hello world!
    </string>
    <string name="none">
        Keines der Felder
    </string>
    <string name="handle">
        …
    </string>
    <string name="crash_toast_text">Bereite Crashlog als Email vor</string><string name="send_logcat">Logcat senden</string>

</resources>
